--- a/css/micromodal.css
+++ b/css/micromodal.css
@@ -46,12 +46,12 @@
 }
 
 .modal__close {
-  background: transparent;
+  background: transparent !important;
   border: 0;
 }
 
 .modal__header .modal__close:before {
-  content: "\2715";
+  content: "\2715" !important;
 }
 
 .modal__content {
